--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Bootcamp DNC </title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-    
+   <nav id="mainPrincipal">
+    <div id="menu">
+        <a href="">Home</a>
+        <a href="">Ultimas Edições</a>
+        <a href="">Requisitos para participar</a>
+    </div>
+    <button>Login</button>
+   </nav>
 </body>
 </html>
