Iniciando formatação de estilo do formulario

--- a/index.html
+++ b/index.html
@@ -20,5 +20,61 @@
     </div>
     <button>Login</button>
    </nav>
+  
+   <section>
+    <header>
+        <h1>Bootcamp DNC</h1>
+        <h2>Esse será um evento exclusivo para todos os alunos<br> 
+            da <b>DNC</b>, que querem <span class="invert">acelerar a carreira</span> com uma<br>
+            semana intensiva de conteúdo de mercado entre<br>
+            <span class="invert" >BACK-END, FRONT-END, E BANCO DE DADOS.</span></h2>
+    </header>
+    
+    <form>
+        <div class="formGrup">
+            <label>Nome:</label>
+            <input type="text" placeholder="Insira seu nome aqui">
+        </div>
+
+        <div class="formGrup">
+            <label>Sobrenome:</label>
+            <input type="text" placeholder="Insira seu sobrenome aqui">
+        </div>
+
+        <div class="formGrup">
+            <label>Área de Interece:</label>
+            <div class="chackboxItens">
+                <input type="checkbox" value="front">
+                <label>Front-end</label>
+
+                <input type="checkbox" value="back">
+                <label>Back-end</label>
+
+                <input type="checkbox" value="bd">
+                <label>Banco de Dados</label>
+            </div>
+        </div>
+
+        <div class="formGrup">
+            <label>E-mail:</label>
+            <input type="email" placeholder="Insira seu e-mail aqui">
+        </div>
+
+        <div class="formGrup">
+            <label>Telefone:</label>
+            <input type="text" placeholder="(99) 9 9999-9999">
+        </div>
+
+        <div class="formGrup">
+            <label>Insira uma frase criativa aqui:</label>
+            <input type="text" placeholder="Qual frase criativa você gostaria de falar? :)">
+        </div>
+
+        <div>
+            <button class="button" type="submit" placeholder="cadastrar">Cadastar</button>
+            
+        </div>
+    </form>
+    </section>
 </body>
 </html>
