Adicionando midia query para mobile

--- a/index.html
+++ b/index.html
@@ -76,5 +76,61 @@
         </div>
     </form>
     </section>
+    <footer>
+        <div class="line1">
+            <nav>
+                <h5>Escolas</h5>
+                <ul>
+                    <li>
+                        <a href="">Formação em Tecnologia</a>
+                    </li>
+
+                    <li>
+                        <a href="">Formação em Marketing</a>
+                    </li>
+
+                    <li>
+                        <a href="">Formação em Dados</a>
+                    </li>
+
+                    <li>
+                        <a href="">Formação em Projetos</a>
+                    </li>
+
+                    <li>
+                        <a href="">Formação em Produtos</a>
+                    </li>
+                </ul>
+            </nav>
+            <nav>
+                <h5>Sobre a DNC</h5>
+                <ul>
+                    <li>
+                        <a href="">História</a>
+                    </li>
+
+                    <li>
+                        <a href="">Misão e Valores</a>
+                    </li>
+
+                    <li>
+                        <a href="">Trabalhe Conosco</a>
+                    </li>
+
+                    <li>
+                        <a href="">Conteúdo Gratuito </a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="endereco">
+                ₢ 2022 DTC Treinamentos & Consultoria <br>LTDA | CNPJ: 27.995.577/0001-
+            </div>
+        </div>
+        
+        <div class="line2">
+            <a href="">Termos de Uso</a>
+            <a href="">Pulítica de Privacidade</a>
+        </div>
+    </footer>
 </body>
 </html>
